--- a/templates/browse.html
+++ b/templates/browse.html
@@ -1,5 +1,3 @@
-<ion-view view-title="Browse">
-  <ion-content>
-    <h1>Browse</h1>
-  </ion-content>
+<ion-view view-title="Demo">
+    <ion-content>Hello! World</ion-content>
 </ion-view>
